<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/register_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_name"
            android:theme="@style/EditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_name"
                android:textSize="14sp"
                android:inputType="text"
                android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_email"
            android:theme="@style/EditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_email"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_username"
            android:theme="@style/EditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_username"
                android:textSize="14sp"
                android:inputType="text"
                android:hint="@string/hint_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_pin"
            android:theme="@style/EditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_pin"
                android:textSize="14sp"
                android:inputType="numberPassword"
                android:hint="@string/hint_pin"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/register"
        android:textSize="14sp"
        android:background="@drawable/around_button"
        android:textColor="@color/icons" />

</LinearLayout>