<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_username"
            android:theme="@style/WhiteEditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_username"
                android:textSize="14sp"
                android:textColor="@color/icons"
                android:inputType="text"
                android:hint="@string/hint_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_pin"
            android:theme="@style/WhiteEditText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_pin"
                android:textSize="14sp"
                android:textColor="@color/icons"
                android:inputType="numberPassword"
                android:hint="@string/hint_pin"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:text="@string/login"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/around_button"
            android:textColor="@color/icons"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_link"
            android:clickable="true"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>