<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_event"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/event"
                android:scaleType="fitStart"
                android:adjustViewBounds="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_form"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/create_event"
                android:textSize="20sp"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_event_name"
                android:theme="@style/WhiteEditText"
                android:paddingBottom="5dp" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_event_name"
                    android:textSize="14sp"
                    android:textColor="@color/icons"
                    android:inputType="text"
                    android:hint="@string/hint_event_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_event_description"
                android:theme="@style/WhiteEditText"
                android:paddingBottom="5dp" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_event_description"
                    android:textSize="14sp"
                    android:textColor="@color/icons"
                    android:inputType="text"
                    android:hint="@string/hint_event_description"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_event_deadline"
                android:theme="@style/WhiteEditText"
                android:paddingBottom="5dp" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_event_deadline"
                    android:textSize="14sp"
                    android:textColor="@color/icons"
                    android:inputType="date"
                    android:hint="@string/hint_event_deadline"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_target_balance"
                android:paddingBottom="5dp"
                android:theme="@style/WhiteEditText">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_target_balance"
                    android:textSize="14sp"
                    android:textColor="@color/icons"
                    android:inputType="number"
                    android:hint="@string/hint_event_target_balance"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_event_btn"
                android:text="@string/create_button"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/around_button"
                android:textColor="@color/icons"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>